# projection-windows

main/: CMakeLists.txt  CMakeSettings.json  main.cc  resource.h  resources.rc  utilities.h
utilities/: CMakeLists.txt  bind.h  main.cc  resources.rc  utilities.h
utilities/frontend/: index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
utilities/frontend/public/: build.lottie  error.lottie  process.lottie  success.lottie
utilities/frontend/public/icons/: icon.ai
utilities/frontend/src/: App.tsx  global.d.ts  index.css
utilities/frontend/src/components/: folder-view.tsx  stepper.tsx  tree-view.tsx
utilities/frontend/src/components/ui/: button.tsx  progress.tsx
utilities/frontend/src/data/: index.ts
utilities/frontend/src/pages/: build.tsx  error.tsx  export.tsx  extract.tsx  finish.tsx  finish_export.tsx  home.tsx  import.tsx  pack.tsx
utilities/frontend/src/stores/: data.store.ts  error.store.ts  navigator.store.ts  page.store.ts
utilities/frontend/src/types/: index.ts
